--- a/app/packages/notes/views/notes/new.html.erb
+++ b/app/packages/notes/views/notes/new.html.erb
@@ -1,1 +1,3 @@
-<%= render "form", note: @note %>
+<%= form_for @note_form, url: notes_path, html: { class: "max-w-sm mx-auto mt-20" } do |form| %>
+  <%= render "form", note: @note_form, form: form %>
+<% end %>
