--- a/app/packages/notes/views/notes/show.html.erb
+++ b/app/packages/notes/views/notes/show.html.erb
@@ -4,10 +4,10 @@
 <% content_for(:sidebar) do %>
   <% if logged_in? %>
     <ul class="sidebar">
-      <li><%= button_to "Edit this note", edit_note_path(@note), method: :get %></li>
-      <li><%= button_to "Destroy this note", @note, method: :delete %></li>
+      <li><%= button_to "Edit this note", edit_note_path(@note.id), method: :get %></li>
+      <li><%= button_to "Destroy this note", note_path(@note.id), method: :delete %></li>
     </ul>
   <% end %>
 <% end %>
 
-<%= render @note %>
+<%= render "note", note: @note %>
