Summary of changes: Updated code and added functionalities to notes - Reduced margin-bottom in notes.css for improved visual flow - Split note into public and private into notes_controller.rb for better note categorization - Introduced 'intro' function in note.rb to format content to display a introduction summary - Sorted notes by date created instead of updated for more relevant ordering in note/find_all.rb - Added create and delete note functionalities in _form.html.erb and _note.html.erb for added user interactivity - Grouped tags in tag/find_all.rb allowing users to browse by tags - Added date next to note title and a brief intro of the note in index.html.erb for better understanding of each note - Updated test suit in find_all_test.rb to test new tags are grouped functionality

--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -61,7 +61,7 @@ ul.note-actions, ul#notes {
 }
 
 ul.note-actions {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   border: 1px solid #777;
   padding: 20px;
   background-color: #ccc;
@@ -75,4 +75,9 @@ ul#notes li {
   border-bottom: 1px dotted #eee;
   padding-bottom: 10px;
   margin-bottom: 10px;
+}
+
+ul#notes li h3 {
+  display: inline-block;
+  margin: 0;
 }
