Welcome to the Font Party! 🎉🎉🎉 - Added that spicy new font to our application.html.erb with nice preconnects for speed 🚀 - Swapped out boring old "Helvetica Neue" for that hot "Ubuntu" in notes.css 😎 - Removed unnecessary specific name in notes header in index.html.erb, now it's all about the NOTES, baby. 📝

--- a/app/packages/notes/views/notes/index.html.erb
+++ b/app/packages/notes/views/notes/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Juan Gallego IV: Notes <%= "on #{params[:tag]}" if params[:tag].present? %> 
+  Notes <%= "on #{params[:tag]}" if params[:tag].present? %> 
 </h1>
 
 <% if logged_in? %>
