--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Helvetica Neue", helvetica, sans-serif;
+  font-family: "Ubuntu", sans-serif;
   line-height: 1.4;
 }
 
