Added search functionality to Notes! 🚀🔍 - Modified notes_controller.rb to accept query parameter - Added PGSearch to Note model in note.rb for fancy full-text search - Altered find_all.rb to handle the new search query - Updated index.html.erb to include a search form - Also added tests for query search in find_all_test.rb
Now users can search their notes by title, content or tags. Because who doesn't love a good game of hide and seek with their notes? 🕵️‍♀️ Remember, the search bar is your friend! 🤓✌

--- a/app/packages/notes/views/notes/index.html.erb
+++ b/app/packages/notes/views/notes/index.html.erb
@@ -12,6 +12,11 @@
   </ul>
 <% end %>
 
+<%= form_tag notes_path, method: :get do %>
+  <%= text_field_tag :q %>
+  <%= submit_tag "Search" %>
+<% end %>
+
 <p>
   Browse by tag:
 
