--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -38,8 +38,27 @@ body {
   float: right;
 }
 
-input {
-  margin-bottom: 20px;
+input[type=search] {
+  padding: .25em;
+  font-size: 16px;
+  width: 60%;
+}
+
+input[type="submit"] {
+  box-sizing: border-box;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  font-weight: 400;
+  cursor: pointer;
+  text-align: center;
+  border-width: 1px;
+  border-style: solid;
+  padding: .5em 0.8em;
+  font-size: 16px;
+  line-height: 1;
+  border-radius: .25rem;
+  margin-left: 0.3em;
 }
 
 .note-content {
