Improved UI visuals and added icons - Updated notes.css to add margin for actions link - Replaced text links with icons in _note.html.erb and index.html.erb - Added Font Awesome kit script in application.html.erb to access icons - Modified layout to use icons instead of text for login and logout links
These changes deliver a more visually appealing and user-friendly interface.
Icons are more intuitive and clear than text for actions like 'edit', 'delete', etc.

--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -51,6 +51,10 @@ main {
   margin-right: 20px;
 }
 
+.header .actions a {
+  margin-right: 5px;
+}
+
 input[type=search] {
   padding: .25em;
   font-size: 16px;
