--- a/app/packages/notes/views/notes/index.html.erb
+++ b/app/packages/notes/views/notes/index.html.erb
@@ -11,7 +11,7 @@
 </h1>
 
 <p>
-  Things to remember and to keep nearby. Check my <a href="https://juan.gallegoiv.com">homepage</a> also.
+  My personal coding journal app. Check my <a href="https://juan.gallegoiv.com">homepage</a> also.
 </p>
 
 <%= form_tag notes_path, method: :get do %>
