--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: "Helvetica Neue", helvetica, sans-serif;
+  line-height: 1.4
 }
 
 .banner {
@@ -23,13 +24,16 @@ body {
   color: #000;
 }
 
-header, main {
+header {
   margin-left: 8px;
-  margin-right: 8px;
 }
 
 main {
   padding-left: 20px;
+}
+
+main h1 {
+  margin-top: 0;
 }
 
 .header a {
@@ -48,6 +52,10 @@ main {
 @media only screen and (max-width: 600px) {
   .header a {
     font-size: 1.4em;
+  }
+
+  main {
+    padding: 0em 1em;
   }
 }
 
