--- a/app/assets/stylesheets/notes.css
+++ b/app/assets/stylesheets/notes.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Helvetica Neue", helvetica, sans-serif;
-  line-height: 1.4
+  line-height: 1.4;
 }
 
 .banner {
@@ -49,16 +49,6 @@ main h1 {
   unicode-bidi: isolate;
 }
 
-@media only screen and (max-width: 600px) {
-  .header a {
-    font-size: 1.4em;
-  }
-
-  main {
-    padding: 0em 1em;
-  }
-}
-
 .header .actions {
   float: right;
   margin-right: 20px;
@@ -66,6 +56,18 @@ main h1 {
 
 .header .actions a {
   margin-right: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .header a {
+    font-size: 1.4em;
+  }
+
+  .header .actions a {
+    margin-right: 0;
+    margin-top: 15px;
+    font-size: 1em;
+  }
 }
 
 input[type=search] {
