--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <%= javascript_importmap_tags %>
 
     <script src="https://kit.fontawesome.com/2d6988e41b.js" crossorigin="anonymous"></script>
+
+    <%= yield(:head) %>
   </head>
 
   <body>
